# discordium

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
discordium/: __init__.py  client.py  errors.py
discordium/cache/: __init__.py  base.py
discordium/ext/: __init__.py  commands.py  guards.py  paginator.py  slash.py  tasks.py
discordium/gateway/: __init__.py  connection.py  sharder.py
discordium/http/: __init__.py  ratelimit.py  rest.py
discordium/models/: __init__.py  audit_log.py  automod.py  base.py  channel.py  components.py  embed.py  enums.py  event_names.py  events.py  file.py  guild.py  intents.py  interaction.py  member.py  message.py  permissions.py  role.py  snowflake.py  thread.py  user.py  webhook.py
discordium/utils/: __init__.py  backoff.py  dispatcher.py  event.py
examples/: 01_quickstart.py  02_slash_commands.py  03_components.py  04_events.py  05_advanced_features.py
tests/: __init__.py  test_core.py  test_edge_cases.py  test_events.py  test_extended.py  test_models.py
